force-app/main/default/objects/Facebook_Config__mdt/Facebook_Config__mdt.object-meta.xml
<CustomObject>
    <label>Facebook Config</label>
    <pluralLabel>Facebook Configs</pluralLabel>
</CustomObject>