force-app/main/default/objects/Facebook_Config__mdt/fields/auth_url__c.field-meta.xml
<CustomField>
    <fullName>auth_url__c</fullName>
    <defaultValue>&quot;https://www.facebook.com/v8.0/dialog/oauth&quot;</defaultValue>
    <label>auth url</label>
    <type>Url</type>
</CustomField>