force-app/main/default/objects/Facebook_Config__mdt/fields/base_url__c.field-meta.xml
<CustomField>
    <fullName>base_url__c</fullName>
    <defaultValue>&quot;https://graph.facebook.com/v8.0/&quot;</defaultValue>
    <label>base url</label>
    <type>Url</type>
</CustomField>