force-app/main/default/objects/Facebook_Config__mdt/fields/client_secret__c.field-meta.xml
<CustomField>
    <fullName>client_secret__c</fullName>
    <label>client secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>