force-app/main/default/objects/Facebook_Config__mdt/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <label>PageName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>