force-app/main/default/objects/Facebook_Config__mdt/fields/Profile_Url__c.field-meta.xml
<CustomField>
    <fullName>Profile_Url__c</fullName>
    <defaultValue>&quot;https://graph.facebook.com/v8.0/me?fields=&quot;</defaultValue>
    <label>Profile Url</label>
    <type>Url</type>
</CustomField>