force-app/main/default/objects/Facebook_Config__mdt/fields/token_url__c.field-meta.xml
<CustomField>
    <fullName>token_url__c</fullName>
    <defaultValue>&quot;https://graph.facebook.com/v8.0/oauth/access_token&quot;</defaultValue>
    <label>token url</label>
    <type>Url</type>
</CustomField>