force-app/main/default/objects/Facebook_Config__mdt/fields/user_fields__c.field-meta.xml
<CustomField>
    <fullName>user_fields__c</fullName>
    <label>user fields</label>
    <type>TextArea</type>
</CustomField>